add and use route for revoking user oauth token grant
