# api/routers/user.js
@@ -5,5 +5,6 @@ const { csrfProtection, sessionAuth } = require('../middlewares');
 
 router.get('/me', sessionAuth, UserController.me);
 router.put('/me/settings', sessionAuth, csrfProtection, UserController.updateSettings);
+router.delete('/me/githubtoken', sessionAuth, UserController.revokeApplicationGrant);
 
 module.exports = router;
